[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-debate"
version = "0.1.0"
description = "Multi-Agent collaborative debate system for code review"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[project.scripts]
agent-debate = "agent_debate.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_debate"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
